--- a/index.html
+++ b/index.html
@@ -126,6 +126,152 @@
       </div>
     </section>
 
+    <!-- Skills Carousel Section -->
+    <section id="skills" class="py-5 bg-light">
+      <div class="container">
+        <div class="text-center mb-5">
+          <h2 class="fw-bold">Technical Skills</h2>
+          <p class="text-muted">
+            Programming languages and technologies I master
+          </p>
+        </div>
+
+        <div id="skillsCarousel" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-inner">
+            <!-- First Slide (Active) -->
+            <div class="carousel-item active">
+              <div class="row justify-content-center">
+                <div class="col-md-3 col-6 text-center">
+                  <div class="skill-card p-4 rounded shadow-sm">
+                    <img
+                      src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg"
+                      alt="JavaScript"
+                      class="img-fluid mb-3"
+                      width="80"
+                    />
+                    <h4>JavaScript</h4>
+                    <p class="text-muted">ES6+, Node.js, React</p>
+                  </div>
+                </div>
+                <div class="col-md-3 col-6 text-center">
+                  <div class="skill-card p-4 rounded shadow-sm">
+                    <img
+                      src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg"
+                      alt="HTML5"
+                      class="img-fluid mb-3"
+                      width="80"
+                    />
+                    <h4>HTML5</h4>
+                    <p class="text-muted">Semantic Markup</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- Second Slide -->
+            <div class="carousel-item">
+              <div class="row justify-content-center">
+                <div class="col-md-3 col-6 text-center">
+                  <div class="skill-card p-4 rounded shadow-sm">
+                    <img
+                      src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg"
+                      alt="CSS3"
+                      class="img-fluid mb-3"
+                      width="80"
+                    />
+                    <h4>CSS3</h4>
+                    <p class="text-muted">Flexbox, Grid, Animations</p>
+                  </div>
+                </div>
+                <div class="col-md-3 col-6 text-center">
+                  <div class="skill-card p-4 rounded shadow-sm">
+                    <img
+                      src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mysql/mysql-original.svg"
+                      alt="MySQL"
+                      class="img-fluid mb-3"
+                      width="80"
+                    />
+                    <h4>MySQL</h4>
+                    <p class="text-muted">Database Design</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- Third Slide -->
+            <div class="carousel-item">
+              <div class="row justify-content-center">
+                <div class="col-md-3 col-6 text-center">
+                  <div class="skill-card p-4 rounded shadow-sm">
+                    <img
+                      src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/bootstrap/bootstrap-original.svg"
+                      alt="Bootstrap"
+                      class="img-fluid mb-3"
+                      width="80"
+                    />
+                    <h4>Bootstrap</h4>
+                    <p class="text-muted">Responsive Design</p>
+                  </div>
+                </div>
+                <div class="col-md-3 col-6 text-center">
+                  <div class="skill-card p-4 rounded shadow-sm">
+                    <img
+                      src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg"
+                      alt="Git"
+                      class="img-fluid mb-3"
+                      width="80"
+                    />
+                    <h4>Git</h4>
+                    <p class="text-muted">Version Control</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Carousel Controls -->
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#skillsCarousel"
+            data-bs-slide="prev"
+          >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#skillsCarousel"
+            data-bs-slide="next"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+
+          <!-- Indicators -->
+          <div class="carousel-indicators position-relative mt-4">
+            <button
+              type="button"
+              data-bs-target="#skillsCarousel"
+              data-bs-slide-to="0"
+              class="active"
+              aria-current="true"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#skillsCarousel"
+              data-bs-slide-to="1"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#skillsCarousel"
+              data-bs-slide-to="2"
+            ></button>
+          </div>
+        </div>
+      </div>
+
     <!-- Portfolio Section -->
     <section id="portfolio" class="py-5">
       <div class="container">
