--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="./styles.css" />
   </head>
@@ -337,6 +338,111 @@
         </div>
       </div>
     </section>
+
+    <!-- Add this section to your HTML -->
+<section id="contact" class="py-5 bg-light">
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-lg-8 col-xl-6">
+        <div class="text-center mb-5">
+          <h2 class="fw-bold mb-3">Contact Me</h2>
+          <div class="d-flex justify-content-center">
+            <div class="border-bottom border-primary border-3" style="width: 80px;"></div>
+          </div>
+        </div>
+
+        <form class="bg-white p-4 p-md-5 rounded-4 shadow-sm">
+          <div class="row g-3">
+            <!-- Name Field -->
+            <div class="col-md-6">
+              <div class="form-floating">
+                <input 
+                  type="text" 
+                  class="form-control border-0 border-bottom" 
+                  id="name" 
+                  placeholder="Your Name"
+                  style="background-color: #f8f9fa;"
+                >
+                <label for="name" class="text-muted">
+                  <i class="bi bi-person me-2"></i>Full Name
+                </label>
+              </div>
+            </div>
+
+            <!-- Email Field -->
+            <div class="col-md-6">
+              <div class="form-floating">
+                <input 
+                  type="email" 
+                  class="form-control border-0 border-bottom" 
+                  id="email" 
+                  placeholder="name@example.com"
+                  style="background-color: #f8f9fa;"
+                >
+                <label for="email" class="text-muted">
+                  <i class="bi bi-envelope me-2"></i>Email Address
+                </label>
+              </div>
+            </div>
+
+            <!-- Subject Field -->
+            <div class="col-12">
+              <div class="form-floating">
+                <select class="form-select border-0 border-bottom" id="subject" style="background-color: #f8f9fa;">
+                  <option selected>Select a subject</option>
+                  <option value="1">Freelance Project</option>
+                  <option value="2">Job Opportunity</option>
+                  <option value="3">Just saying hello</option>
+                </select>
+                <label for="subject" class="text-muted">
+                  <i class="bi bi-chat-square-text me-2"></i>Subject
+                </label>
+              </div>
+            </div>
+
+            <!-- Message Field -->
+            <div class="col-12">
+              <div class="form-floating">
+                <textarea 
+                  class="form-control border-0 border-bottom" 
+                  id="message" 
+                  placeholder="Your message" 
+                  style="height: 150px; background-color: #f8f9fa;"
+                ></textarea>
+                <label for="message" class="text-muted">
+                  <i class="bi bi-pencil-square me-2"></i>Your Message
+                </label>
+              </div>
+            </div>
+
+            <!-- Submit Button -->
+            <div class="col-12 text-center mt-4">
+              <button class="btn btn-primary btn-lg px-4 py-3 rounded-pill shadow" type="button">
+                <i class="bi bi-send-fill me-2"></i>Send Message
+              </button>
+            </div>
+          </div>
+        </form>
+
+        <!-- Visual divider -->
+        <div class="text-center mt-5">
+          <p class="text-muted">Or connect via</p>
+          <div class="d-flex justify-content-center gap-3">
+            <a href="#" class="text-decoration-none text-dark fs-4">
+              <i class="bi bi-linkedin"></i>
+            </a>
+            <a href="#" class="text-decoration-none text-dark fs-4">
+              <i class="bi bi-github"></i>
+            </a>
+            <a href="#" class="text-decoration-none text-dark fs-4">
+              <i class="bi bi-twitter-x"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
     <!-- Bootstrap JS Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
